--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "fs": "^0.0.1-security",
     "jsdom": "^19.0.0",
     "moment-timezone": "^0.5.34",
+    "mongodb": "^4.3.1",
     "node-fetch": "2.6.2",
     "ora": "^6.0.1",
     "pm2": "^5.1.2",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
+    "sharp": "^0.29.3",
     "spinnies": "^0.5.1",
-    "wa-sticker-formatter": "^4.2.0"
+    "wa-sticker-formatter": "^4.2.0",
+    "yt-search": "^2.10.3"
   }
 }
